package edu.hitsz.prop;

public interface BasePropFactory {

    BaseProp createProp(int locationX, int locationY, int speedX, int speedY, int power);

}
